[gd_scene load_steps=12 format=3 uid="uid://dwcou6ea5scea"]

[ext_resource type="Script" path="res://Scenes/fishionary.gd" id="1_emphk"]
[ext_resource type="Texture2D" uid="uid://x4qqty1bin5d" path="res://Assets/Phone.png" id="2_bk5fb"]
[ext_resource type="PackedScene" uid="uid://bniexxxqtoabk" path="res://Scenes/fish_container.tscn" id="2_ct634"]
[ext_resource type="Texture2D" uid="uid://bpkj6dddrtavq" path="res://Assets/Buttons/ExitUP.png" id="3_pcchd"]
[ext_resource type="Texture2D" uid="uid://du2s7la1tqct1" path="res://Assets/Buttons/ExitDOWN.png" id="4_68vrn"]
[ext_resource type="LabelSettings" uid="uid://cnw3wdb2q0mrr" path="res://defaultLabelSettings.tres" id="4_jy8nr"]
[ext_resource type="Texture2D" uid="uid://bm43qgsolf4j6" path="res://Assets/Buttons/ShowShiny.png" id="6_xmibe"]
[ext_resource type="Texture2D" uid="uid://bj81botcadakq" path="res://Assets/Buttons/ShowShinyPressed.png" id="7_btbg4"]
[ext_resource type="AudioStream" uid="uid://bfumxqwliu4hl" path="res://Assets/Sounds/shiny.mp3" id="9_bo0qt"]

[sub_resource type="InputEventAction" id="InputEventAction_66fwk"]
action = &"DictHotkey"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_kftxq"]
events = [SubResource("InputEventAction_66fwk")]

[node name="Fishionary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emphk")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454732, 0.177254, 2.40654e-07, 1)

[node name="Phone" type="TextureRect" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -325.0
offset_right = 200.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bk5fb")

[node name="ExitButton2" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 175.0
offset_top = 566.0
offset_right = 223.0
offset_bottom = 616.0
shortcut = SubResource("Shortcut_kftxq")
texture_normal = ExtResource("3_pcchd")
texture_pressed = ExtResource("4_68vrn")
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(325, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -281.0
offset_right = 163.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2

[node name="FishList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="FiscriptionBG" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -247.0
offset_right = 416.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454732, 0.177254, 2.40654e-07, 1)

[node name="Icon" type="TextureRect" parent="FiscriptionBG"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
texture = ExtResource("3_pcchd")
expand_mode = 1

[node name="DescBG" type="ColorRect" parent="FiscriptionBG"]
layout_mode = 0
offset_top = 299.0
offset_right = 832.0
offset_bottom = 495.0
color = Color(0.225701, 0.0724245, 2.40654e-08, 1)

[node name="Name" type="Label" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 310.0
offset_right = 700.0
offset_bottom = 50.0
text = "Name"
label_settings = ExtResource("4_jy8nr")
vertical_alignment = 1

[node name="Value" type="Label" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 310.0
offset_top = 50.0
offset_right = 700.0
offset_bottom = 125.0
text = "Base Value:
$0"
label_settings = ExtResource("4_jy8nr")

[node name="Rarity" type="Label" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 310.0
offset_top = 125.0
offset_right = 700.0
offset_bottom = 200.0
text = "Rarity:
1"
label_settings = ExtResource("4_jy8nr")

[node name="Worlds" type="Label" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 310.0
offset_top = 185.0
offset_right = 827.0
offset_bottom = 300.0
text = "Native to:"
label_settings = ExtResource("4_jy8nr")
autowrap_mode = 3

[node name="Desc" type="Label" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 10.0
offset_top = 310.0
offset_right = 820.0
offset_bottom = 492.0
text = "Did you know that this fish is a fish?"
label_settings = ExtResource("4_jy8nr")
autowrap_mode = 3

[node name="ShowShiny" type="TextureButton" parent="FiscriptionBG"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -562.0
offset_top = -225.0
offset_right = -532.0
offset_bottom = -195.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("6_xmibe")
texture_pressed = ExtResource("7_btbg4")
stretch_mode = 0

[node name="BackButton" type="TextureButton" parent="FiscriptionBG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = 62.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_kftxq")
texture_normal = ExtResource("3_pcchd")
texture_pressed = ExtResource("4_68vrn")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="FiscriptionBG"]
layout_mode = 0
offset_left = 838.0
offset_top = 209.0
offset_right = 915.0
offset_bottom = 284.0
shortcut = SubResource("Shortcut_kftxq")
texture_normal = ExtResource("3_pcchd")
texture_pressed = ExtResource("4_68vrn")
stretch_mode = 0

[node name="PhoneSideways" type="TextureRect" parent="FiscriptionBG"]
layout_mode = 0
offset_left = -71.0
offset_top = 547.0
offset_right = 529.0
offset_bottom = 1547.0
rotation = -1.5708
mouse_filter = 2
texture = ExtResource("2_bk5fb")

[node name="FishContainer" parent="." instance=ExtResource("2_ct634")]
visible = false
layout_mode = 0
offset_right = 325.0

[node name="ShowShinySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bo0qt")
volume_db = -10.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="BG/ExitButton2" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="FiscriptionBG/ShowShiny" to="." method="_on_show_shiny_pressed"]
[connection signal="pressed" from="FiscriptionBG/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="FiscriptionBG/ExitButton" to="." method="_on_exit_button_pressed"]
